Bug 130051 - Skia: There are no control's borders in dialogs
Summary: Skia: There are no control's borders in dialogs
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-01-17 10:40 UTC by Roman Kuznetsov
Modified: 2020-02-01 07:56 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot with problem. Skia is to left (32.91 KB, image/png)
2020-01-17 10:42 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-01-17 10:40:43 UTC
Description:
Skia: There are no control's borders in dialogs (see attach)

Steps to Reproduce:
1. Activate Skia
2. Open Writer
3. Create a table
4. Open Table properties dialog
5. Look at controls (see attach, Skia to left)

Actual Results:
There are no control's borders in dialogs

Expected Results:
there are all control's borders in dialogs


Reproducible: Always


User Profile Reset: No



Additional Info:
Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: 6095612850973388ba5b121b34d02292a2548e7d
Потоков ЦП: 4; ОС:Windows 10.0 Build 18362; Отрисовка ИП: Skia/Raster; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 Roman Kuznetsov 2020-01-17 10:42:26 UTC
Created attachment 157213 [details]
Screenshot with problem. Skia is to left
Comment 2 Commit Notification 2020-01-30 14:15:29 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f56bbe3a09265a62792dc0624fdb44f8c176172

again finally(?) fix Skia Windows widget drawing (tdf#130051)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Roman Kuznetsov 2020-02-01 07:56:26 UTC
verified in

Версия: 7.0.0.0.alpha0+ (x64)
ID сборки: e8ac78d3afdeb0302eaea34a50f1ca912d5fe897
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded

Thanks for fixing