again finally(?) fix Skia Windows widget drawing (tdf#130051)

I was correct to see in 202146901b6fbab92 that the black bitmap was
in premultiplied alpha, but what I missed what that some controls
keep the alpha set at zero (and only some work properly). So go back
to the algorithm of synthetizing alpha from the red channel, compute
it properly (before it was using alpha channel by mistake), and
treat the data properly as premultiplied.
This hopefully finally makes all Windows control widgets work.

Change-Id: If2716eb8ecf623fcc57ee1db5904edfaee679aa9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87734
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>